@@ -1382,7 +1382,7 @@
       <karma>-5</karma>
       <category>Negative</category>
       <bonus>
-        <blockskillgroupdefaulting />
+        <skillgroupdisablechoice />
         <notoriety>1</notoriety>
       </bonus>
       <source>SR5</source>
